# VacuumRobot

./: .gitignore  CMakeLists.txt  README.md  build_script.sh  main.c
controller/: CMakeLists.txt  main.c
controller/creator/: CMakeLists.txt  controller.c  controller.h  creator.c  creator.h
controller/creator/encoder/: encoder.c  encoder.h
controller/creator/robot/: robot.c  robot.h
controller/io/: CMakeLists.txt
controller/io/input/: input.c  input.h
controller/io/output/: output.c  output.h
pscommon/: constants.h  robotInput.h  robotOutput.h
pscommon/logger/: CMakeLists.txt  log.c  log.h  logThread.c  logThread.h
scripts/: Flat.py  Furnitures.py  Garbages.py  Threading_main.py  VacuumRobot.py  Walls.py
scripts/test/: test_client.py
simulation/: CMakeLists.txt  main.c
simulation/flat/: CMakeLists.txt  creator.c  creator.h
simulation/flat/db/: creator.c  creator.h  doors.c  doors.h  furnitures.h  garbages.c  garbages.h  jsonCreator.c  jsonCreator.h  rooms.c  rooms.h  walls.c  walls.h
simulation/flat/rooms/: rooms.c  rooms.h
simulation/flat/rooms/doors/: doors.c  doors.h
simulation/flat/rooms/furnitures/: furnitures.h
simulation/flat/rooms/garbages/: garbages.c  garbages.h
simulation/flat/rooms/walls/: walls.c  walls.h
simulation/flat/visualization/: jsonCreator.c  jsonCreator.h
simulation/io/: CMakeLists.txt
simulation/io/input/: input.c  input.h
simulation/io/output/: output.c  output.h
simulation/robot/: CMakeLists.txt  creator.c  creator.h  robot.c  robot.h
simulation/robot/encoder/: encoder.c  encoder.h
simulation/robot/motors/: motor.c  motor.h
simulation/robot/sensors/: sensor.c  sensor.h
simulation/robot/visualization/: jsonCreator.c  jsonCreator.h
simulation/sockets/: CMakeLists.txt  socket.c  socket.h
simulation/sockets/common/: socket.c  socket.h
simulation/src/: main.c
